Added mapper classes and refactorization